--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "lint": "run-s lint:*",
     "format": "prettier --write src/",
     "check updates": "npx npm-check-updates",
-    "install updates": "npx npm-check-updates -u"
+    "install updates": "npx npm-check-updates -u",    
+    "npm install": "npm install"
   },
   "dependencies": {
     "pinia": "^2.2.6",
-    "sass-embedded": "^1.81.0",
-    "vue": "^3.5.12",
+    "vue": "^3.5.13",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
@@ -29,24 +29,25 @@
     "@tsconfig/node22": "^22.0.0",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.9.0",
-    "@vitejs/plugin-vue": "^5.1.4",
-    "@vitest/eslint-plugin": "1.1.7",
+    "@vitejs/plugin-vue": "^5.2.0",
+    "@vitest/eslint-plugin": "1.1.10",
     "@vue/eslint-config-prettier": "^10.1.0",
     "@vue/eslint-config-typescript": "^14.1.3",
     "@vue/test-utils": "^2.4.6",
-    "@vue/tsconfig": "^0.5.1",
-    "eslint": "^9.14.0",
-    "eslint-plugin-oxlint": "^0.11.0",
-    "eslint-plugin-playwright": "^2.0.0",
-    "eslint-plugin-vue": "^9.30.0",
+    "@vue/tsconfig": "^0.6.0",
+    "eslint": "^9.15.0",
+    "eslint-plugin-oxlint": "^0.11.1",
+    "eslint-plugin-playwright": "^2.0.1",
+    "eslint-plugin-vue": "^9.31.0",
     "jsdom": "^25.0.1",
     "npm-run-all2": "^7.0.1",
-    "oxlint": "^0.11.0",
+    "oxlint": "^0.11.1",
     "prettier": "^3.3.3",
+    "sass-embedded": "^1.81.0",
     "typescript": "~5.6.3",
-    "vite": "^5.4.10",
-    "vite-plugin-vue-devtools": "^7.5.4",
-    "vitest": "^2.1.4",
+    "vite": "^5.4.11",
+    "vite-plugin-vue-devtools": "^7.6.4",
+    "vitest": "^2.1.5",
     "vue-tsc": "^2.1.10"
   }
 }
